# Atlas

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTOR_GUIDE.md  DEPLOYMENT.md  INDEX.md  LICENSE  Makefile  README.md  quickstart.sh
.github/wiki/: API-Reference.md  Architecture.md  Contributing.md  Deployment.md  Home.md
.github/workflows/: cleanup-branches.yml  deploy-backend.yml  deploy-pages.yml  sync-wiki.yml
compiler/: Cargo.toml  atlas.db
compiler/src/: auth.rs  lib.rs  main.rs
compiler/tests/: auth_endpoints.rs  body_and_output.rs  deps_and_tags.rs  errors.rs  ingest.rs  ingest_submission.rs  parsing.rs  wikilinks.rs
math/: test.typ
math/algebra/: def-cyclic-group.typ  group.typ  my-theorem.typ  thm-wikilink-test.typ
math/analysis/: thm-bolzano-weierstrass.typ
math/demo/: thm-demo-example.typ
math/geometry/: thm-pythagorean.typ
math/schema/: math-graph.typ
math/submissions/: thm-demo-example.typ
math/uncategorized/: def-cyclic-group.typ
public/: CNAME  app.js  ide.html  index.html  math-graph.typ  profile.html  style.css  submit.html
public/css/: ide.css  profile.css  style.css  submit.css
public/js/: app.js  auth.js  config.js  ide.js  profile.js  submit.js
public/json/: graph.json
scripts/: deploy_backend.sh
