[package]
name = "math-graph-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
typst-syntax = "0.14.2"

serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.149"

# Web server and async runtime
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15.0"
oauth2 = "5.0.0"
